pi-hole/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pihole-webserver
  namespace: hole
  labels:
    app: pihole-webserver
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
      name: https
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: pihole
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-service
  namespace: hole
  labels:
    app: pihole-dns-webserver
spec:
  type: LoadBalancer
  ports:
    - port: 53
      targetPort: 53
      protocol: TCP
      name: dns-tcp
    - port: 53
      targetPort: 53
      protocol: UDP
      name: dns-udp
  selector:
    app: pihole
  externalTrafficPolicy: Local
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dhcp-service
  namespace: hole
  labels:
    app: pihole-dhcp
spec:
  type: ClusterIP
  ports:
    - port: 67
      targetPort: 67
      protocol: UDP
      name: dhcp
  selector:
    app: pihole
