pi-hole/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hole
  namespace: hole
  annotations:
    cert-manager.io/acme-challenge-type: dns01
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/dns01-provider: cloudflare
spec:
  ingressClassName: traefik
  rules:
  - host: pihole.xafardero.us
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole-webserver
            port:
              number: 80
  tls:
    - hosts:
        - pihole.xafardero.us
      secretName: pihole-tls
